--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+#mytext{
+  width: 300px;
+  height: 100px;
+
+}
+
+#page1 {
+  background-image: url("pictures/valencia.png");
+  background-repeat: no-repeat;
+   background-position: center;
+   height: 500px;
+}
+
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -18,9 +32,6 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
-  background-color: #111;
-}
 
 .active {
   background-color: #4CAF50;
@@ -66,5 +77,6 @@ li.dropdown {
 }
 
 h2 a {
-  color: black;
+  color: blue;
+  
 }
