--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 #page1 {
-  background-image: url("pictures/valencia.png");
+  background-image: url("valencia.png");
   background-repeat: no-repeat;
    background-position: center;
    height: 500px;
@@ -78,5 +78,5 @@ li.dropdown {
 
 h2 a {
   color: blue;
-  
+
 }
