--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,23 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 #mytext{
-  width: 300px;
-  height: 100px;
 
-}
-
-#page1 {
   background-image: url("valencia.png");
-  background-repeat: no-repeat;
-   background-position: center;
-   height: 500px;
+  height: 100%;
+  background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 }
+
+
 
 
 ul {
