--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ text-align: center;
 
 #codes{
   background-image: url("code.jpg");
-  height: 100%;
+  height: auto%;
   background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
@@ -175,4 +175,10 @@ table {
 .hori {
   border-top: 2px solid black;
   border-bottom: 2px solid black;
+}
+
+td{
+  text-align: center;
+vertical-align: middle;
+font-size: 60px;
 }
