--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ background-repeat: no-repeat;
 background-size: cover;
   margin: 0;
     padding: 1px;
+  color:  #666600;
 }
 
 #me{
@@ -151,8 +152,9 @@ h2 a {
 }
 
 .container{
-  margin-left: 13%;
-  margin-right: auto;
+  padding-left: 30%;
+
+  width: auto;
 
 
 }
@@ -231,4 +233,13 @@ border: 1px solid black;
 
 h1 {
   text-align: center;
+}
+
+h2{
+  text-align: center;
+}
+
+img{
+  width: 75%;
+  height: 75%;
 }
